k8s/services/matrix/app/mautrix-facebook/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-facebook
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsUser: 1337
        runAsGroup: 1337
        fsGroup: 1337
      containers:
        - name: mautrix-facebook
          image: dock.mau.dev/mautrix/facebook
          ports:
            - name: http
              containerPort: 29319
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data/config.yaml
              readOnly: true
              subPath: config.yaml
            - name: appservice
              mountPath: /data/registration.yaml
              readOnly: true
              subPath: mautrix-facebook.yaml
      volumes:
        - name: config
          secret:
            secretName: mautrix-facebook-config
        - name: appservice
          secret:
            secretName: matrix-appservices
