k8s/services/matrix/app/mautrix-facebook/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-facebook
spec:
  ports:
    - name: http
      port: 9993
      targetPort: http
