k8s/services/matrix/app/mautrix-facebook/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mautrix-facebook
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - matrix.lama-corp.space
  rules:
    - matches:
        - path:
            value: /mautrix-facebook
      backendRefs:
        - name: mautrix-facebook
          port: 9993
